# Multi-Otsu-Thresholding

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/input/: aGeSb3_r199_16.tif
include/: multi_otsu.hpp  tiff_io.hpp
src/: main.cpp  tiff_io.cpp
tests/: test_multi_otsu.cpp
